# capstone

./: .gitignore  CMakeLists.txt  CMakePresets.json  CapstoneClassDiagram.puml  README.md  vcpkg.json
CMakeHelloWorld/: CMakeHelloWorld.h  CMakeLists.txt
CMakeHelloWorld/src/: App.cpp  App.h  CMakeHelloWorld.cpp
CMakeHelloWorld/src/acq/: FakeAcquisition.cpp  FakeAcquisition.h  IAcqProvider.h  RunAcq.h  UnicornAcq.h
CMakeHelloWorld/src/ftrExtract/: SlidingWindow.cpp  SlidingWindow.h
CMakeHelloWorld/src/process/: FtrExtract.h  SlidingWindow.cpp  SlidingWindow.h
CMakeHelloWorld/src/stimulus/: Stim.cpp  Stim.h
CMakeHelloWorld/src/utils/: MicroComms.cpp  MicroComms.h  ModelStore.cpp  ModelStore.h  RingBuffer.h  RingBuffer.tpp  TimingManager.cpp  TimingManager.h  Types.h
CapstoneProject/: CMakeLists.txt  notes.txt
CapstoneProject/filter design/python/: FilterDesign.py  FilterVis.py
CapstoneProject/model train/python/: fake_backend_vis.py  train_cnn.py  train_ssvep.py  train_svm.py
CapstoneProject/model train/python/misc/: ssvep_explore.py
CapstoneProject/model train/python/trainers/: cnn_trainer.py  svm_trainer.py
CapstoneProject/model train/python/utils/: utils.py
CapstoneProject/src/: App.h  CapstoneProject.cpp
CapstoneProject/src/acq/: FakeAcquisition.cpp  FakeAcquisition.h  IAcqProvider.h  UnicornCheck.h  UnicornDriver.cpp  UnicornDriver.h  WindowConfigs.hpp
CapstoneProject/src/classifier/: FeatureExtractor.hpp  LaunchTrainingJob.cpp  LaunchTrainingJob.hpp  ONNXClassifier.hpp
CapstoneProject/src/ftrExtract/: FtrExtract.h
CapstoneProject/src/shared/: StateStore.hpp
CapstoneProject/src/stimulus/: HttpServer.cpp  HttpServer.hpp  StateStore.hpp  Stim.cpp  Stim.h  Stim.html  StimulusController.cpp  StimulusController.hpp
CapstoneProject/src/ui/: Stim.css  Stim.html  Stim.js  eeg.html
CapstoneProject/src/ui/lib/: chart.umd.min.js
CapstoneProject/src/utils/: Filters.cpp  Filters.hpp  JsonUtils.hpp  Logger.cpp  Logger.hpp  MicroComms.cpp  MicroComms.h  RingBuffer.hpp  RingBuffer.tpp  SWTimer.hpp  SessionPaths.cpp  SessionPaths.hpp  SignalQualityAnalyzer.cpp  SignalQualityAnalyzer.h  TimingManager.h  Types.h
CapstoneProject/unicorn/include/: unicorn.h
CapstoneProject/unit_tests/: HttpServerSelfTest.cpp  UIStateMachineSelfTest.cpp  UnicornSelfTest.cpp
models/test_person/2025-12-25_14-31-08/: train_result.json
